Correction de bugs graphiques sur la page Ateliers
- Lorsqu'on filtrait les ateliers, il y avait comme des "espaces" vides qui étaient générés, le bug est corrigé
- Ajout d'un bouton "Retour vers la liste des ateliers" en bas de la description d'un atelier
- Leger redesign des ateliers sur la page listant les ateliers

--- a/EduCode/assets/static/style.css
+++ b/EduCode/assets/static/style.css
@@ -742,4 +742,9 @@ a[href="#program"]:not(.collapsed) {
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out; }
 
+#workshop-containers-page .card {
+  background-color: #fff9f2 !important; }
+#workshop-containers-page .card-footer {
+  border-top: none; }
+
 /*# sourceMappingURL=style.css.map */
