--- a/EduCode/templates/workshop.html
+++ b/EduCode/templates/workshop.html
@@ -80,8 +80,11 @@
                 </div>
                 <hr>
                 <p class="text-center">
-                    <a class="btn btn-warning" href="{{ '/' | url }}">
-                        <i class="fa fa-home"></i> Back to home
+                    <a class="btn btn-warning mb-1" href="{{ '/ateliers' | url }}">
+                        <i class="fa fa-calendar-minus-o"></i> Retour aux ateliers
+                    </a>
+                    <a class="btn btn-warning mb-1" href="{{ '/' | url }}">
+                        <i class="fa fa-home"></i> Retour à l'accueil
                     </a>
                 </p>
             </div>
